--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "nanoid": "^3.1.20",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@types/concurrently": "^5.2.1",
@@ -40,7 +42,9 @@
     "@types/eslint": "^7.2.6",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/nanoid": "^2.1.0",
     "@types/supertest": "^2.0.10",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "concurrently": "^5.3.0",
